# yew-trunk-web-worker-flowbite-tailwind-rust-wasm-example-app

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  app-16a1908ebc4f2b38.js  app-16a1908ebc4f2b38_bg.wasm  app-36b0519f94891b3e.js  app-36b0519f94891b3e_bg.wasm  app-5783ea58b61bfc97.js  app-7333472ff275480e.js  app-7c4e6de83ef6bd58.js  app-7c4e6de83ef6bd58_bg.wasm  app-9393e48aae7707a6.js  app-9393e48aae7707a6_bg.wasm  app-aa1ced51bb2303e.js  app-aa1ced51bb2303e_bg.wasm  app-cd9011d6c2d0741c.js  app-cd9011d6c2d0741c_bg.wasm  app-ebe2def46e4f80a9.js  app-ebe2def46e4f80a9_bg.wasm  index.html  package-lock.json  package.json  tailwind-190cf65857704ec7.css  tailwind.config.js  tailwind.css  worker.js  worker_bg.wasm
.github/workflows/: publish.yml
src/: file_dropper.rs  gen_url.rs  lib.rs  tranform_sgml_agent.rs
