[package]
name = "lbp-convert"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
wasm-bindgen = "0.2.74"
web-sys = "0.3.60"
yew-agent = "0.2"
serde = "1"
gloo-console = "0.2"
sgmlish = "0.2"
chrono = "0.4"
gloo-file = "0.2"