[package]
name = "lbp-convert"
version = "0.1.0"
edition = "2021"
description = "Example project, wasm yew webworker, do transformations on a OFX SGML file"
readme = "README.md"
repository = "https://github.com/maxerbox/yew-trunk-web-worker-flowbite-tailwind-rust-wasm-example-app"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
wasm-bindgen = "0.2.74"
web-sys = "0.3.60"
js-sys = "0.3.60"
yew-agent = "0.2"
serde = "1"
gloo-console = "0.2"
sgmlish = "0.2"
chrono = "0.4"
default-env = "0.1"
gloo-timers = "0.2"